--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build:frontend": "cd frontend && npm run build"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.18.0"
   }
 }
